tests/netedit/basic/configs/netecfg/load/invalid/additionals/errors.netedit
Error: Cannot read file 'C:\Users\alva_pa\.texttest\tmp\netedit.gui.13Dec091641.23688\netedit.gui\basic\configs\netecfg\invalid_inputs\additionals\dummy.add.xml'!
Error: Loading of C:\Users\alva_pa\.texttest\tmp\netedit.gui.13Dec091641.23688\netedit.gui\basic\configs\netecfg\invalid_inputs\additionals\dummy.add.xml failed.
Error: Could not build trip in netedit; taz doesn't exist.
Error: Could not build trip in netedit; taz doesn't exist.
Error: Could not build trip in netedit; taz doesn't exist.
Error: Could not build trip in netedit; taz doesn't exist.
Error: Loading of C:\Users\alva_pa\.texttest\tmp\netedit.gui.13Dec091641.23688\netedit.gui\basic\configs\netecfg\invalid_inputs\additionals\routes.rou.xml failed.
